--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TheRiceKing</title>
+    <title>Mr. RiceKing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Fonts -->
@@ -10,6 +10,8 @@
 
     <!-- Main CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -25,7 +27,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo-area">
-        <h1 class="site-title">TheRiceKing</h1>
+        <h1 class="site-title">Mr. RiceKing</h1>
         <div class="ornament-line"></div>
       </div>
 
