--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,19 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+        <h2>Contact</h2>
+        <p>Join my Discord server for community discussions.</p>
+        <div class="social-icons">
+          <div class="contact-item">
+            <img src="assets/icons/discord.png" alt="Discord" class="social-icon" data-modal="discord">
+            <p>Discord</p>
+          </div>
+          <!-- Add other profiles -->
+        </div>
       </section>
+      <div id="modal" class="modal">
+        <div class="modal-content"></div>
+      </div>
     </main>
 
   </div>
@@ -51,6 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modals.js"></script>
 
 </body>
 </html>
