--- a/gamer.html
+++ b/gamer.html
@@ -40,9 +40,49 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+        <h2>Gamer Profile</h2>
+        <p>Explore my gaming journey, favorite games, and platform profiles.</p>
+        <div class="platform-icons">
+          <img src="assets/icons/steam.png" alt="Steam" class="social-icon" data-modal="steam">
+          <img src="assets/icons/xbox.png" alt="Xbox" class="social-icon" data-modal="xbox">
+          <img src="assets/icons/battlenet.png" alt="Battle.net" class="social-icon" data-modal="battlenet">
+          <img src="assets/icons/epic.png" alt="Epic Games" class="social-icon" data-modal="epic">
+        </div>
+        <div class="stats">
+          <div>Total Hours Played: 5000+</div>
+          <div>Favorite Genre: RPG</div>
+          <div>Current Games: 15</div>
+        </div>
+        <select id="sort">
+          <option value="all">All Categories</option>
+          <option value="rpg">RPG</option>
+          <option value="fps">FPS</option>
+          <option value="strategy">Strategy</option>
+        </select>
+        <div class="grid" id="games">
+          <div class="card" data-category="rpg">
+            <img src="assets/covers/witcher3.jpg" alt="The Witcher 3">
+            <h3>The Witcher 3</h3>
+            <button onclick="openModal('witcher3')">Details</button>
+          </div>
+          <div class="card" data-category="fps">
+            <img src="assets/covers/cyberpunk.jpg" alt="Cyberpunk 2077">
+            <h3>Cyberpunk 2077</h3>
+            <button onclick="openModal('cyberpunk')">Details</button>
+          </div>
+          <div class="card" data-category="strategy">
+            <img src="assets/covers/civ6.jpg" alt="Civilization VI">
+            <h3>Civilization VI</h3>
+            <button onclick="openModal('civ6')">Details</button>
+          </div>
+          <!-- Add more placeholder games -->
+        </div>
       </section>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <!-- Content populated by JS -->
+        </div>
+      </div>
     </main>
 
   </div>
@@ -51,6 +91,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modals.js"></script>
 
 
 </body>
