--- a/index.html
+++ b/index.html
@@ -39,10 +39,24 @@
 
     <!-- Main Content -->
     <main class="content">
-      <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+      <section class="cover-section" style="background-image: url('assets/banners/cover.jpg');">
+        <img src="assets/avatars/avatar.jpg" alt="Avatar" class="avatar">
       </section>
+      <section class="page-section">
+        <h1>Mr. RiceKing</h1>
+        <p>Legendary gamer and artist summary here.</p>
+        <div class="social-icons">
+          <img src="assets/icons/discord.png" alt="Discord" class="social-icon" data-modal="discord">
+          <img src="assets/icons/snapchat.png" alt="Snapchat" class="social-icon" data-modal="snapchat">
+          <img src="assets/icons/steam.png" alt="Steam" class="social-icon" data-modal="steam">
+          <img src="assets/icons/paypal.png" alt="PayPal" class="social-icon" data-modal="paypal">
+        </div>
+      </section>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <!-- Content populated by JS -->
+        </div>
+      </div>
     </main>
 
   </div>
@@ -51,6 +65,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modals.js"></script>
 
 </body>
 </html>
