--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
 </head>
 
 <body>
@@ -40,8 +41,27 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+        <h2>Art Portfolio</h2>
+        <p>Explore my artistic creations, from digital paintings to 3D models.</p>
+        <div class="grid">
+          <div class="card">
+            <a href="assets/images/art1.jpg" class="glightbox" data-title="Digital Painting" data-description="Fantasy landscape created in Photoshop.">
+              <img src="assets/images/art1.jpg" alt="Art 1">
+            </a>
+            <h3>Digital Painting</h3>
+            <p>Fantasy landscape</p>
+            <small>Created: 2023-10-15</small>
+          </div>
+          <div class="card">
+            <a href="assets/images/art2.jpg" class="glightbox" data-title="3D Model" data-description="Sci-fi character model in Blender.">
+              <img src="assets/images/art2.jpg" alt="Art 2">
+            </a>
+            <h3>3D Model</h3>
+            <p>Sci-fi character</p>
+            <small>Created: 2023-11-20</small>
+          </div>
+          <!-- Add more art tiles -->
+        </div>
       </section>
     </main>
 
@@ -49,8 +69,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/viewer.js"></script>
 
 </body>
 </html>
