--- a/projects.html
+++ b/projects.html
@@ -40,9 +40,27 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+        <h2>Current Projects</h2>
+        <p>Preview my ongoing projects and goals.</p>
+        <div class="grid">
+          <div class="card">
+            <img src="assets/icons/high.png" alt="High Priority" class="priority-high">
+            <h3>Game Development</h3>
+            <p>Building an indie RPG.</p>
+            <button onclick="openModal('project1')">Details</button>
+          </div>
+          <div class="card">
+            <img src="assets/icons/med.png" alt="Medium Priority" class="priority-med">
+            <h3>Art Commission</h3>
+            <p>Custom digital portrait.</p>
+            <button onclick="openModal('project2')">Details</button>
+          </div>
+          <!-- Add more -->
+        </div>
       </section>
+      <div id="modal" class="modal">
+        <div class="modal-content"></div>
+      </div>
     </main>
 
   </div>
@@ -51,6 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modals.js"></script>
 
 </body>
 </html>
