--- a/resources.html
+++ b/resources.html
@@ -40,8 +40,28 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+        <h2>Resources</h2>
+        <p>Useful tools and content recommendations.</p>
+        <div class="filters">
+          <select id="category">
+            <option value="all">All Categories</option>
+            <option value="tools">Tools</option>
+            <option value="tutorials">Tutorials</option>
+          </select>
+          <select id="sort">
+            <option value="time">Sort by Time</option>
+            <option value="rating">Sort by Rating</option>
+          </select>
+        </div>
+        <div class="grid" id="resources">
+          <div class="card" data-category="tools" data-rating="5" data-time="2023-12-01">
+            <h3>Blender</h3>
+            <p>3D modeling software.</p>
+            <p>Rating: ★★★★★</p>
+            <small>Posted: 2023-12-01</small>
+          </div>
+          <!-- Add more -->
+        </div>
       </section>
     </main>
 
@@ -51,6 +71,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modals.js"></script>
 
 </body>
 </html>
