--- a/index.html
+++ b/index.html
@@ -39,14 +39,37 @@
 
     <!-- Main Content -->
     <main class="content">
-      <section class="page-section">
-        <h2>Welcome</h2>
-        <p>This is the beginning of something legendary.</p>
+      <section class="hero">
+        <img src="assets/images/cover.jpg" alt="Cover Photo" class="cover-photo">
+        <img src="assets/images/avatar.jpg" alt="Mr. RiceKing Avatar" class="avatar">
+        <h1 class="display-name">Mr. RiceKing</h1>
+        <p class="summary">A passionate gamer and artist crafting legendary experiences. Join my journey through games, art, and creativity.</p>
+        <div class="social-icons">
+          <div class="icon-item" data-modal="discord">
+            <img src="assets/icons/discord.png" alt="Discord">
+          </div>
+          <div class="icon-item" data-modal="snapchat">
+            <img src="assets/icons/snapchat.png" alt="Snapchat">
+          </div>
+          <div class="icon-item" data-modal="steam">
+            <img src="assets/icons/steam.png" alt="Steam">
+          </div>
+          <div class="icon-item" data-modal="paypal">
+            <img src="assets/icons/paypal.png" alt="PayPal">
+          </div>
+        </div>
       </section>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div id="modal-body"></div>
+        </div>
+      </div>
     </main>
 
   </div>
 
+    <script src="js/modals.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
