--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <!-- Main Content -->
     <main class="content">
       <section class="hero">
-        <img src="assets/images/cover.jpg" alt="Cover Photo" class="cover-photo">
-        <img src="assets/images/avatar.jpg" alt="Mr. RiceKing Avatar" class="avatar">
+        <img src="assets/images/cover.png" alt="Cover Photo" class="cover-photo">
+        <img src="assets/images/avatar.png" alt="Mr. RiceKing Avatar" class="avatar">
         <h1 class="display-name">Mr. RiceKing</h1>
         <p class="summary">A passionate gamer and artist crafting legendary experiences. Join my journey through games, art, and creativity.</p>
         <div class="social-icons">
