--- a/gamer.html
+++ b/gamer.html
@@ -61,7 +61,7 @@
           <select id="sort">
             <option value="rating">Sort by Rating</option>
             <option value="time">Sort by Playtime</option>
-            <option value="age">Sort by Release Age</option>
+            <option value="age">Sort by Release Date</option>
           </select>
         </div>
         <div class="grid" id="games">
