--- a/portfolio.html
+++ b/portfolio.html
@@ -44,29 +44,33 @@
         <h2>Art Portfolio</h2>
         <p>Explore my creations—click to view in fullscreen.</p>
         <div class="grid" id="portfolio">
-          <div class="card" data-lightbox="art" data-title="Digital Portrait" data-desc="A fantasy character study." data-time="2023-10-15">
-            <img src="assets/images/art1.jpg" alt="Art 1">
+          <div class="card">
+            <a href="assets/images/Celestial-Trivar.png" data-lightbox="art" data-title="Digital Portrait - A fantasy character study. Created: 2023-10-15">
+              <img src="assets/images/Celestial-Trivar.png" alt="Celestial Trivar">
+            </a>
             <h3>Digital Portrait</h3>
             <p>A fantasy character study.</p>
             <small>Created: 2023-10-15</small>
           </div>
-          <div class="card" data-lightbox="art" data-title="Concept Art" data-desc="Sci-fi landscape." data-time="2023-11-20">
-            <img src="assets/images/art2.jpg" alt="Art 2">
+          <div class="card">
+            <a href="assets/images/Crown-of-Trivar.png" data-lightbox="art" data-title="Concept Art - Sci-fi landscape. Created: 2023-11-20">
+              <img src="assets/images/Crown-of-Trivar.png" alt="Crown of Trivar">
+            </a>
             <h3>Concept Art</h3>
             <p>Sci-fi landscape.</p>
             <small>Created: 2023-11-20</small>
           </div>
-          <!-- Add more art -->
+          <!-- Add more -->
         </div>
       </section>
 </main>
 
   </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
