--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -42,36 +41,66 @@
     <main class="content">
       <section class="page-section">
         <h2>Art Portfolio</h2>
-        <p>Explore my creations—click to view in fullscreen.</p>
+        <p>Click any piece to explore in detail.</p>
         <div class="grid" id="portfolio">
-          <div class="card">
-            <a href="assets/images/Celestial-Trivar.png" data-lightbox="art" data-title="Digital Portrait - A fantasy character study. Created: 2023-10-15">
-              <img src="assets/images/Celestial-Trivar.png" alt="Celestial Trivar">
-            </a>
-            <h3>Digital Portrait</h3>
-            <p>A fantasy character study.</p>
-            <small>Created: 2023-10-15</small>
-          </div>
-          <div class="card">
-            <a href="assets/images/Crown-of-Trivar.png" data-lightbox="art" data-title="Concept Art - Sci-fi landscape. Created: 2023-11-20">
-              <img src="assets/images/Crown-of-Trivar.png" alt="Crown of Trivar">
-            </a>
-            <h3>Concept Art</h3>
-            <p>Sci-fi landscape.</p>
-            <small>Created: 2023-11-20</small>
-          </div>
-          <!-- Add more -->
+          <!-- Dynamically generated from portfolio-viewer.js -->
         </div>
       </section>
-</main>
+    </main>
 
+  </div>
+
+  <!-- Custom Portfolio Modal -->
+  <div id="portfolio-modal" class="portfolio-modal">
+    <div class="portfolio-modal-content">
+      <span class="modal-close" onclick="closePortfolioModal()">&times;</span>
+      <div class="modal-left">
+        <div id="modal-media" class="modal-media-container"></div>
+        <div class="media-nav">
+          <button onclick="prevMedia()" class="nav-btn">&larr;</button>
+          <span id="media-counter">1/1</span>
+          <button onclick="nextMedia()" class="nav-btn">&rarr;</button>
+        </div>
+      </div>
+      <div class="modal-right">
+        <h2 id="modal-title">Title</h2>
+        <p id="modal-description">Description</p>
+        <small id="modal-date">Date</small>
+      </div>
+      <div class="item-nav">
+        <button onclick="prevItem()" class="nav-btn-vertical">&#x25B2;</button>
+        <button onclick="nextItem()" class="nav-btn-vertical">&#x25BC;</button>
+      </div>
+    </div>
   </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script src="js/portfolio-viewer.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      // Generate portfolio grid from data
+      document.addEventListener("DOMContentLoaded", () => {
+        const grid = document.getElementById("portfolio");
+        portfolioData.forEach(item => {
+          const card = document.createElement("div");
+          card.className = "card portfolio-card";
+          card.onclick = () => openPortfolioModal(item.id);
+          const firstMedia = item.media[0];
+          const mediaHtml = firstMedia.type === "image" 
+            ? `<img src="${firstMedia.src}" alt="${firstMedia.alt}">`
+            : `<video src="${firstMedia.src}" style="width:100%; height:200px; object-fit:cover; border-radius:8px;"></video>`;
+          card.innerHTML = `
+            ${mediaHtml}
+            <h3>${item.title}</h3>
+            <p>${item.description.substring(0, 60)}...</p>
+            <small>Created: ${item.date}</small>
+          `;
+          grid.appendChild(card);
+        });
+      });
+    </script>
 
 </body>
 </html>
