--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing</title>
+    <title>Mr. RiceKing - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Fonts -->
@@ -40,18 +40,46 @@
     <!-- Main Content -->
     <main class="content">
       <section class="page-section">
-        <h2>Contact</h2>
-        <p>Join my Discord server for community discussions.</p>
-        <div class="social-icons">
-          <div class="contact-item">
-            <img src="assets/icons/discord.png" alt="Discord" class="social-icon" data-modal="discord">
+        <h2>Connect With Me</h2>
+        
+        <!-- Discord Community Intro -->
+        <div class="discord-intro">
+          <h3>Join My Discord Community</h3>
+          <p>The heart of my community. Connect with fellow gamers, artists, and creators. Share ideas, collaborate, and grow together in a legendary space.</p>
+          <a href="https://discord.gg/59fvxyjfKD" target="_blank" class="discord-btn">
+            <img src="assets/icons/discord.png" alt="Discord">
+            <span>Join Discord</span>
+          </a>
+        </div>
+
+        <!-- Social Platforms -->
+        <h3 style="margin-top: 50px; margin-bottom: 30px;">Find Me On</h3>
+        <div class="contact-icons">
+          <div class="contact-item" data-modal="discord">
+            <img src="assets/icons/discord.png" alt="Discord">
             <p>Discord</p>
           </div>
-          <!-- Add other profiles -->
+          <div class="contact-item" data-modal="snapchat">
+            <img src="assets/icons/snapchat.png" alt="Snapchat">
+            <p>Snapchat</p>
+          </div>
+          <div class="contact-item" data-modal="steam">
+            <img src="assets/icons/steam.png" alt="Steam">
+            <p>Steam</p>
+          </div>
+          <div class="contact-item" data-modal="paypal">
+            <img src="assets/icons/paypal.png" alt="PayPal">
+            <p>PayPal</p>
+          </div>
         </div>
       </section>
+
+      <!-- Contact Modal (reuses existing modal) -->
       <div id="modal" class="modal">
-        <div class="modal-content"></div>
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div id="modal-body"></div>
+        </div>
       </div>
     </main>
 
@@ -60,8 +88,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/modals.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
