--- a/gamer.html
+++ b/gamer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing</title>
+    <title>Mr. RiceKing - Gamer Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Fonts -->
@@ -41,60 +41,64 @@
     <main class="content">
       <section class="page-section">
         <h2>Gamer Profile</h2>
-        <p>Explore my gaming world, from platforms to favorites.</p>
-        <div class="social-icons">
-          <!-- Same as homepage, but for platforms -->
-          <div class="icon-item" data-modal="steam">
-            <img src="assets/icons/steam.png" alt="Steam">
+        <p>My favorite games, current obsessions, and memorable gaming moments.</p>
+        
+        <div class="platform-section">
+          <h3>Gaming Platforms</h3>
+          <div class="social-icons">
+            <div class="icon-item" data-modal="steam">
+              <img src="assets/icons/steam.png" alt="Steam">
+              <p>Steam</p>
+            </div>
+            <!-- Add more platforms as needed -->
           </div>
-          <!-- Add Xbox, Battle.net, Epic -->
         </div>
-        <div class="filters">
-          <select id="category">
-            <option value="all">All Genres</option>
-            <option value="rpg">RPG</option>
-            <option value="fps">FPS</option>
-            <option value="sandbox">Sandbox</option>
-            <option value="moba">MOBA</option>
-            <option value="mmorpg">MMORPG</option>
-          </select>
-          <select id="sort">
-            <option value="rating">Sort by Rating</option>
-            <option value="time">Sort by Playtime</option>
-            <option value="age">Sort by Release Date</option>
-          </select>
+
+        <div class="tag-filters">
+          <button class="filter-btn active" onclick="filterByTag('all')">All Games</button>
+          <button class="filter-btn" onclick="filterByTag('Favorites')">Favorites</button>
+          <button class="filter-btn" onclick="filterByTag('In Rotation')">In Rotation</button>
+          <button class="filter-btn" onclick="filterByTag('Memorable')">Memorable</button>
         </div>
+
         <div class="grid" id="games">
-          <div class="card" data-category="rpg" data-rating="9" data-time="100">
-            <img src="assets/images/game1.jpg" alt="Game 1">
-            <h3>The Witcher 3</h3>
-            <button onclick="openGameModal('witcher')">Details</button>
-          </div>
-          <div class="card" data-category="sandbox" data-rating="9" data-time="100">
-            <img src="assets/images/gmod.jpg" alt="Game 2">
-            <h3>Garry's Mod</h3>
-            <button onclick="openGameModal('gmod')">Details</button>
-          </div>
-          <!-- Add more games -->
+          <!-- Dynamically generated from games.js -->
         </div>
       </section>
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <div id="modal-body"></div>
-        </div>
-      </div>
     </main>
 
   </div>
 
-    <script src="js/modals.js"></script>
-    <script src="js/games.js"></script>
+  <!-- Games Modal -->
+  <div id="games-modal" class="games-modal">
+    <div class="games-modal-content">
+      <span class="modal-close" onclick="closeGameModal()">&times;</span>
+      <div class="modal-game-left">
+        <div id="modal-game-cover"></div>
+      </div>
+      <div class="modal-game-right">
+        <h2 id="modal-game-title">Game Title</h2>
+        <p id="modal-game-description">Description</p>
+        <div class="game-stats">
+          <p><strong>Rating:</strong> <span id="modal-game-rating">★★★★★</span></p>
+          <p id="modal-game-time">Playtime: 0 hours</p>
+          <p id="modal-game-style">Style: Unknown</p>
+        </div>
+        <p id="modal-game-review">Review text here</p>
+      </div>
+      <div class="game-nav">
+        <button onclick="prevGame()" class="nav-btn-vertical">&#x25B2;</button>
+        <button onclick="nextGame()" class="nav-btn-vertical">&#x25BC;</button>
+      </div>
+    </div>
+  </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="js/vanta-init.js"></script>
+    <script src="js/games.js"></script>
+    <script src="js/modals.js"></script>
     <script src="js/main.js"></script>
-
 
 </body>
 </html>
