--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,20 @@
+-DEV THINGS\Github\Pages\MrRiceKing.github.io\contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mr. RiceKing - Contact & Connect. Find me on Discord, Steam, Twitter, and more.">
+    <title>Mr. RiceKing - Contact</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="preload" href="css/styles.css" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
-  <!-- Vanta Background -->
   <div id="vanta-bg"></div>
 
-  <!-- Layout Wrapper -->
   <div class="layout">
-
-    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo-area">
         <h1 class="site-title">Mr. RiceKing</h1>
@@ -35,61 +29,57 @@
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact</a>
       </nav>
+
+      <div class="ornament-line"></div>
     </aside>
 
-    <!-- Main Content -->
     <main class="content">
       <section class="page-section">
         <h2>Connect With Me</h2>
-        
-        <!-- Discord Community Intro -->
+        <p>Let's collaborate, share ideas, or just have a chat. Find me on your favorite platform.</p>
+
         <div class="discord-intro">
           <h3>Join My Discord Community</h3>
-          <p>The heart of my community. Connect with fellow gamers, artists, and creators. Share ideas, collaborate, and grow together in a legendary space.</p>
-          <a href="https://discord.gg/59fvxyjfKD" target="_blank" class="discord-btn">
-            <img src="assets/icons/discord.png" alt="Discord">
+          <p>The heart of my community. Connect with fellow gamers, artists, and creators. Share ideas, collaborate, and grow together in a legendary space dedicated to creativity and gaming.</p>
+          <a href="https://discord.gg/59fvxyjfKD" target="_blank" rel="noopener noreferrer" class="discord-btn">
+            <img src="assets/icons/discord.png" alt="Discord" loading="lazy">
             <span>Join Discord</span>
           </a>
         </div>
 
-        <!-- Social Platforms -->
-        <h3 style="margin-top: 50px; margin-bottom: 30px;">Find Me On</h3>
+        <h3 style="margin-top: 50px; margin-bottom: 30px;color: var(--highlight-icy);">Find Me On</h3>
         <div class="contact-icons">
           <div class="contact-item" data-modal="discord">
-            <img src="assets/icons/discord.png" alt="Discord">
+            <img src="assets/icons/discord.png" alt="Discord" loading="lazy">
             <p>Discord</p>
           </div>
-          <div class="contact-item" data-modal="snapchat">
-            <img src="assets/icons/snapchat.png" alt="Snapchat">
-            <p>Snapchat</p>
-          </div>
           <div class="contact-item" data-modal="steam">
-            <img src="assets/icons/steam.png" alt="Steam">
+            <img src="assets/icons/steam.png" alt="Steam" loading="lazy">
             <p>Steam</p>
           </div>
+          <div class="contact-item" data-modal="snapchat">
+            <img src="assets/icons/twitter.png" alt="Snapchat" loading="lazy">
+            <p>Twitter</p>
+          </div>
           <div class="contact-item" data-modal="paypal">
-            <img src="assets/icons/paypal.png" alt="PayPal">
-            <p>PayPal</p>
+            <img src="assets/icons/paypal.png" alt="Support" loading="lazy">
+            <p>Support</p>
           </div>
         </div>
       </section>
-
-      <!-- Contact Modal (reuses existing modal) -->
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <div id="modal-body"></div>
-        </div>
-      </div>
     </main>
-
   </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
-    <script src="js/vanta-init.js"></script>
-    <script src="js/modals.js"></script>
-    <script src="js/main.js"></script>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modal-body"></div>
+    </div>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" integrity="sha512-vYpn4GhMVU8fLZQPPyy9mmdCiGXABwNRiFKKZ/gnVl3xG3r3K/5FLELf9YYN9L5l5PqL8KwXwZN5l/c06I4mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+  <script src="js/vanta-init.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
