--- a/gamer.html
+++ b/gamer.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing - Gamer Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mr. RiceKing - Gamer Profile. Game library, playthrough logs, and gaming recommendations.">
+    <title>Mr. RiceKing - Gamer Profile</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="preload" href="css/styles.css" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
-  <!-- Vanta Background -->
   <div id="vanta-bg"></div>
 
-  <!-- Layout Wrapper -->
   <div class="layout">
-
-    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo-area">
         <h1 class="site-title">Mr. RiceKing</h1>
@@ -35,41 +28,37 @@
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact</a>
       </nav>
+
+      <div class="ornament-line"></div>
     </aside>
 
-    <!-- Main Content -->
     <main class="content">
       <section class="page-section">
         <h2>Gamer Profile</h2>
-        <p>My favorite games, current obsessions, and memorable gaming moments.</p>
-        
+        <p>My favorite games, current obsessions, and memorable gaming moments across multiple platforms.</p>
+
         <div class="platform-section">
           <h3>Gaming Platforms</h3>
           <div class="social-icons">
             <div class="icon-item" data-modal="steam">
-              <img src="assets/icons/steam.png" alt="Steam">
+              <img src="assets/icons/steam.png" alt="Steam" loading="lazy">
               <p>Steam</p>
             </div>
-            <!-- Add more platforms as needed -->
           </div>
         </div>
 
         <div class="tag-filters">
           <button class="filter-btn active" onclick="filterByTag('all')">All Games</button>
-          <button class="filter-btn" onclick="filterByTag('Favorites')">Favorites</button>
+          <button class="filter-btn" onclick="filterByTag('Favorites')">Favorites ♥</button>
           <button class="filter-btn" onclick="filterByTag('In Rotation')">In Rotation</button>
           <button class="filter-btn" onclick="filterByTag('Memorable')">Memorable</button>
         </div>
 
-        <div class="grid" id="games">
-          <!-- Dynamically generated from games.js -->
-        </div>
+        <div class="grid" id="games"></div>
       </section>
     </main>
-
   </div>
 
-  <!-- Games Modal -->
   <div id="games-modal" class="games-modal">
     <div class="games-modal-content">
       <span class="modal-close" onclick="closeGameModal()">&times;</span>
@@ -84,21 +73,18 @@
           <p id="modal-game-time">Playtime: 0 hours</p>
           <p id="modal-game-style">Style: Unknown</p>
         </div>
-        <p id="modal-game-review">Review text here</p>
       </div>
       <div class="game-nav">
-        <button onclick="prevGame()" class="nav-btn-vertical">&#x25B2;</button>
-        <button onclick="nextGame()" class="nav-btn-vertical">&#x25BC;</button>
+        <button onclick="prevGame()" class="nav-btn-vertical" aria-label="Previous game">▲</button>
+        <button onclick="nextGame()" class="nav-btn-vertical" aria-label="Next game">▼</button>
       </div>
     </div>
   </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
-    <script src="js/vanta-init.js"></script>
-    <script src="js/games.js"></script>
-    <script src="js/modals.js"></script>
-    <script src="js/main.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" integrity="sha512-vYpn4GhMVU8fLZQPPyy9mmdCiGXABwNRiFKKZ/gnVl3xG3r3K/5FLELf9YYN9L5l5PqL8KwXwZN5l/c06I4mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+  <script src="js/vanta-init.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/games.js"></script>
 </body>
 </html>
