--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mr. RiceKing - Gamer, Artist, Creator. Portfolio, gaming profiles, and creative projects.">
+    <title>Mr. RiceKing - Home</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="preload" href="css/styles.css" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
-  <!-- Vanta Background -->
   <div id="vanta-bg"></div>
 
-  <!-- Layout Wrapper -->
   <div class="layout">
-
-    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo-area">
         <h1 class="site-title">Mr. RiceKing</h1>
@@ -35,45 +28,48 @@
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact</a>
       </nav>
+
+      <div class="ornament-line"></div>
     </aside>
 
-    <!-- Main Content -->
     <main class="content">
       <section class="hero">
-        <img src="assets/images/cover.png" alt="Cover Photo" class="cover-photo">
-        <img src="assets/images/avatar.png" alt="Mr. RiceKing Avatar" class="avatar">
+        <img src="assets/images/cover.png" alt="Cover Photo" class="cover-photo" loading="lazy">
+        <img src="assets/images/avatar.png" alt="Mr. RiceKing Avatar" class="avatar" loading="lazy">
         <h1 class="display-name">Mr. RiceKing</h1>
         <p class="summary">A passionate gamer and artist crafting legendary experiences. Join my journey through games, art, and creativity.</p>
         <div class="social-icons">
           <div class="icon-item" data-modal="discord">
-            <img src="assets/icons/discord.png" alt="Discord">
-          </div>
-          <div class="icon-item" data-modal="snapchat">
-            <img src="assets/icons/snapchat.png" alt="Snapchat">
+            <img src="assets/icons/discord.png" alt="Discord" loading="lazy">
+            <p>Discord</p>
           </div>
           <div class="icon-item" data-modal="steam">
-            <img src="assets/icons/steam.png" alt="Steam">
+            <img src="assets/icons/steam.png" alt="Steam" loading="lazy">
+            <p>Steam</p>
+          </div>
+          <div class="icon-item" data-modal="snapchat">
+            <img src="assets/icons/snapchat.png" alt="Snapchat" loading="lazy">
+            <p>Snapchat</p>
           </div>
           <div class="icon-item" data-modal="paypal">
-            <img src="assets/icons/paypal.png" alt="PayPal">
+            <img src="assets/icons/paypal.png" alt="PayPal" loading="lazy">
+            <p>Support</p>
           </div>
         </div>
       </section>
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <div id="modal-body"></div>
-        </div>
-      </div>
     </main>
-
   </div>
 
-    <script src="js/modals.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
-    <script src="js/vanta-init.js"></script>
-    <script src="js/main.js"></script>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modal-body"></div>
+    </div>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" integrity="sha512-vYpn4GhMVU8fLZQPPyy9mmdCiGXABwNRiFKKZ/gnVl3xG3r3K/5FLELf9YYN9L5l5PqL8KwXwZN5l/c06I4mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+  <script src="js/vanta-init.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
