--- a/portfolio.html
+++ b/portfolio.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mr. RiceKing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mr. RiceKing - Art Portfolio. Digital paintings, character designs, and creative artwork.">
+    <title>Mr. RiceKing - Art Portfolio</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="preload" href="css/styles.css" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
-  <!-- Vanta Background -->
   <div id="vanta-bg"></div>
 
-  <!-- Layout Wrapper -->
   <div class="layout">
-
-    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo-area">
         <h1 class="site-title">Mr. RiceKing</h1>
@@ -35,31 +28,28 @@
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact</a>
       </nav>
+
+      <div class="ornament-line"></div>
     </aside>
 
-    <!-- Main Content -->
     <main class="content">
       <section class="page-section">
         <h2>Art Portfolio</h2>
-        <p>Click any piece to explore in detail.</p>
-        <div class="grid" id="portfolio">
-          <!-- Dynamically generated from portfolio-viewer.js -->
-        </div>
+        <p>Click any piece to explore in detail. Swipe with arrow keys or click navigation buttons.</p>
+        <div class="grid" id="portfolio"></div>
       </section>
     </main>
-
   </div>
 
-  <!-- Custom Portfolio Modal -->
   <div id="portfolio-modal" class="portfolio-modal">
     <div class="portfolio-modal-content">
       <span class="modal-close" onclick="closePortfolioModal()">&times;</span>
       <div class="modal-left">
         <div id="modal-media" class="modal-media-container"></div>
         <div class="media-nav">
-          <button onclick="prevMedia()" class="nav-btn">&larr;</button>
+          <button onclick="prevMedia()" class="nav-btn">&larr; Previous</button>
           <span id="media-counter">1/1</span>
-          <button onclick="nextMedia()" class="nav-btn">&rarr;</button>
+          <button onclick="nextMedia()" class="nav-btn">Next &rarr;</button>
         </div>
       </div>
       <div class="modal-right">
@@ -68,39 +58,16 @@
         <small id="modal-date">Date</small>
       </div>
       <div class="item-nav">
-        <button onclick="prevItem()" class="nav-btn-vertical">&#x25B2;</button>
-        <button onclick="nextItem()" class="nav-btn-vertical">&#x25BC;</button>
+        <button onclick="prevItem()" class="nav-btn-vertical" aria-label="Previous artwork">▲</button>
+        <button onclick="nextItem()" class="nav-btn-vertical" aria-label="Next artwork">▼</button>
       </div>
     </div>
   </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
-    <script src="js/vanta-init.js"></script>
-    <script src="js/portfolio-viewer.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-      // Generate portfolio grid from data
-      document.addEventListener("DOMContentLoaded", () => {
-        const grid = document.getElementById("portfolio");
-        portfolioData.forEach(item => {
-          const card = document.createElement("div");
-          card.className = "card portfolio-card";
-          card.onclick = () => openPortfolioModal(item.id);
-          const firstMedia = item.media[0];
-          const mediaHtml = firstMedia.type === "image" 
-            ? `<img src="${firstMedia.src}" alt="${firstMedia.alt}">`
-            : `<video src="${firstMedia.src}" style="width:100%; height:200px; object-fit:cover; border-radius:8px;"></video>`;
-          card.innerHTML = `
-            ${mediaHtml}
-            <h3>${item.title}</h3>
-            <p>${item.description.substring(0, 60)}...</p>
-            <small>Created: ${item.date}</small>
-          `;
-          grid.appendChild(card);
-        });
-      });
-    </script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" integrity="sha512-vYpn4GhMVU8fLZQPPyy9mmdCiGXABwNRiFKKZ/gnVl3xG3r3K/5FLELf9YYN9L5l5PqL8KwXwZN5l/c06I4mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+  <script src="js/vanta-init.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/portfolio-viewer.js"></script>
 </body>
 </html>
