--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
--DEV THINGS\Github\Pages\MrRiceKing.github.io\contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,8 +57,8 @@
             <p>Steam</p>
           </div>
           <div class="contact-item" data-modal="snapchat">
-            <img src="assets/icons/twitter.png" alt="Snapchat" loading="lazy">
-            <p>Twitter</p>
+            <img src="assets/icons/snapchat.png" alt="Snapchat" loading="lazy">
+            <p>Snapchat</p>
           </div>
           <div class="contact-item" data-modal="paypal">
             <img src="assets/icons/paypal.png" alt="Support" loading="lazy">
